# OpenGL_Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  Main.cpp  README.md  tree.txt  vcpkg.json
engine/include/engine/: Camera.h  EBO.h  MathUtils.h  Mesh.h  Model.h  Shader.h  Skybox.h  Texture.h  VAO.h  VBO.h
engine/src/: Camera.cpp  Cubemap.cpp  EBO.cpp  HDRConverter.cpp  HDRTexture.cpp  MathUtils.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Skybox.cpp  Texture.cpp  VAO.cpp  VBO.cpp
